--- a/index.css
+++ b/index.css
@@ -4,11 +4,45 @@
 }
 a{
     text-decoration: none;
-    color: inherit;
+    color: rgb(34, 33, 33);
 }
 body{
     background-color: #4d4a40;
     overflow-x: hidden;
+}
+.aside{
+    position: fixed;
+    top: 50%;
+    right: 5%;
+    width: 30px;
+}
+.aside i{
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin-top: 5px;
+    font-size: 30px;
+    cursor: pointer;
+}
+.aside .fa-volume-off{
+    width: 25px;
+    padding-left: 4px;
+    font-size: 35px;
+}
+.aside .fa-angle-double-up{
+    font-size: 35px;
+}
+.aside .fa-volume-off:hover{
+    font-size: 40px;
+}
+.aside i:hover{
+    font-size: 35px;
+    text-shadow: 0px 4px 3px rgb(199, 199, 199);
+}
+.aside .fa-angle-double-up:hover{
+    font-size: 40px;
+    color:rgb(26, 25, 25);
+    text-shadow: 2px 3px 3px rgb(199, 199, 199);
 }
 .container{
     background-color: #fff;
@@ -25,6 +59,9 @@ body{
     display: flex;
     align-items: center;
 }
+.container header a:hover{
+    color: #fff;
+}
 .container header h2{
     font-size: 42px;
     color: #fff;
@@ -37,13 +74,8 @@ body{
     padding-right: 203px;
     flex: 0 0 720px;
 }
-span,
-a:link,
-a:optional{
+.container header span{
     color: #dbdbdb;
-}
-a:hover{
-    color: #fff;
 }
 .container article{
     line-height: 2;
@@ -91,22 +123,13 @@ a:hover{
 .container article .section h3 .pic li:hover{
     -webkit-animation-play-state: paused;
 }
-.container footer div{
-    height: 1em;
-    width: 100px;
-    position: relative;
-    line-height: 1em;
-    margin: 0 auto;
+.container footer{
+    text-align: center;
+    margin-top: 20px;
+    background-color: rgba(204, 199, 199, 0.308);
 }
-.container footer div:hover >a{
-    display: inline;
-}
-.container footer div a{
-    position: absolute;
-    right: 0;
-    color: #000;
-    display: none;
-    line-height: 1em;
+.container footer .connect a{
+    color: #1a1919;
 }
 @media all and (max-width:850px){
     .container{
